<resources>
    <string name="app_name">Recipic</string>
    <string name="tv_ml_result">Result</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="find_recipes">Find Recipes</string>
    <string name="preference_file_key">1627384950</string>
    <string name="saved_labels">SAVED_LABELS</string>
    <string name="recipes_title">Recipes</string>
    <string name="recipe_details_title">Recipe Details</string>
    <string name="dessert_category">DESSERT</string>
    <string name="dinner_category">DINNER</string>
    <string name="lunch_category">LUNCH</string>
    <string name="breakfast_category">BREAKFAST</string>
    <string name="title_category">What do we fancy making?</string>
    <string name="saved_category">SAVED_CATEGORY</string>
    <string name="search_new">New Search</string>
    <string name="recipes_title_empty">No Recipes Found!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="register">Register</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="saved_firstname">SAVED_FIRSTNAME</string>
    <string name="saved_lastname">SAVED_LASTNAME</string>
    <string name="saved_gender">SAVED_GENDER</string>
    <string name="saved_email">SAVED_EMAIL</string>
    <string name="upload_photo">Upload photo</string>
    <string name="my_photos_title">My Stories</string>
    <string name="saved_id">SAVED_ID</string>
    <string name="string_choose_file">Choose File</string>
    <string name="string_upload_image">Uplaod Image</string>
    <string name="string_view_image">View Images</string>
</resources>