<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriesActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/body_container">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="#6AFFEB3B"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/title_category"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold|italic"
            app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/llCategories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/category"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cvBreakfast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:elevation="1dp"
                android:onClick="onClickCategory"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/breakfast"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/breakfast_category"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_marginVertical="5dp"
                        android:textStyle="italic"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvLunch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:elevation="1dp"
                android:onClick="onClickCategory"
                android:layout_marginLeft="10dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/lunch"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/lunch_category"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_marginVertical="5dp"
                        android:textStyle="italic"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <androidx.cardview.widget.CardView
                android:id="@+id/cvDinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:elevation="1dp"
                android:onClick="onClickCategory"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/dinner"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/dinner_category"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_marginVertical="5dp"
                        android:textStyle="italic"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvDessert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp"
                android:elevation="1dp"
                android:onClick="onClickCategory"
                android:layout_marginLeft="10dp"
                card_view:cardUseCompatPadding="true"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        app:srcCompat="@drawable/dessert"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:text="@string/dessert_category"
                        android:textColor="#000000"
                        android:textSize="18sp"
                        android:layout_marginVertical="5dp"
                        android:textStyle="italic"
                        android:textAlignment="center"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corner"
        android:elevation="6dp"
        app:itemIconSize="30dp"
        app:itemIconTint="@drawable/item_selector"
        app:itemRippleColor="@android:color/transparent"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"/>
</RelativeLayout>